@@ -1,19 +1,25 @@
 package com.jlh.jlhautopambackend.services;
 
+import com.jlh.jlhautopambackend.config.GarageProperties;
+import com.jlh.jlhautopambackend.dto.ClientStatsDto;
 import com.jlh.jlhautopambackend.dto.DemandeRequest;
 import com.jlh.jlhautopambackend.dto.DemandeResponse;
+import com.jlh.jlhautopambackend.dto.ProchainRdvDto;
 import com.jlh.jlhautopambackend.mapper.DemandeMapper;
 import com.jlh.jlhautopambackend.modeles.Client;
 import com.jlh.jlhautopambackend.modeles.Demande;
 import com.jlh.jlhautopambackend.modeles.StatutDemande;
 import com.jlh.jlhautopambackend.modeles.TypeDemande;
-import com.jlh.jlhautopambackend.repositories.ClientRepository;
-import com.jlh.jlhautopambackend.repositories.DemandeRepository;
-import com.jlh.jlhautopambackend.repositories.StatutDemandeRepository;
-import com.jlh.jlhautopambackend.repositories.TypeDemandeRepository;
+import com.jlh.jlhautopambackend.repository.ClientRepository;
+import com.jlh.jlhautopambackend.repository.DemandeRepository;
+import com.jlh.jlhautopambackend.repository.RendezVousRepository;
+import com.jlh.jlhautopambackend.repository.StatutDemandeRepository;
+import com.jlh.jlhautopambackend.repository.TypeDemandeRepository;
+import com.jlh.jlhautopambackend.utils.IcsUtil;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -21,78 +27,261 @@ import java.util.stream.Collectors;
 @Service
 @Transactional
 public class DemandeServiceImpl implements DemandeService {
-    private final DemandeRepository repository;
-    private final ClientRepository clientRepo;
-    private final TypeDemandeRepository typeRepo;
-    private final StatutDemandeRepository statutRepo;
-    private final DemandeMapper mapper;
 
-    public DemandeServiceImpl(DemandeRepository repository,
-                              ClientRepository clientRepo,
-                              TypeDemandeRepository typeRepo,
-                              StatutDemandeRepository statutRepo,
-                              DemandeMapper mapper) {
-        this.repository = repository;
+    private final DemandeRepository       repo;
+    private final ClientRepository        clientRepo;
+    private final TypeDemandeRepository   typeRepo;
+    private final StatutDemandeRepository statutRepo;
+    private final DemandeMapper           mapper;
+    private final RendezVousRepository    rendezVousRepo;
+    private final GarageProperties        garageProps;
+
+    public DemandeServiceImpl(
+            DemandeRepository repo,
+            ClientRepository clientRepo,
+            TypeDemandeRepository typeRepo,
+            StatutDemandeRepository statutRepo,
+            DemandeMapper mapper,
+            RendezVousRepository rendezVousRepo,
+            GarageProperties garageProps
+    ) {
+        this.repo = repo;
         this.clientRepo = clientRepo;
         this.typeRepo = typeRepo;
         this.statutRepo = statutRepo;
         this.mapper = mapper;
+        this.rendezVousRepo = rendezVousRepo;
+        this.garageProps = garageProps;
+    }
+
+    private static final String STATUT_BROUILLON  = "Brouillon";
+    private static final String STATUT_EN_ATTENTE = "En_attente";
+    private static final String TYPE_DEVIS        = "Devis";
+
+    private TypeDemande getTypeOrThrow(String code) {
+        return typeRepo.findById(code)
+                .orElseThrow(() -> new IllegalArgumentException("TypeDemande introuvable: " + code));
+    }
+
+    private StatutDemande getStatutOrThrow(String code) {
+        return statutRepo.findById(code)
+                .orElseThrow(() -> new IllegalArgumentException("StatutDemande introuvable: " + code));
+    }
+
+    private TypeDemande getDefaultType() {
+        return getTypeOrThrow(TYPE_DEVIS);
+    }
+
+    /** ⬅️ Défaut = Brouillon (panier temporaire tant que non validé) */
+    private StatutDemande getDefaultStatut() {
+        return getStatutOrThrow(STATUT_BROUILLON);
+    }
+
+    private void ensureDateDemandeSet(Demande entity) {
+        if (entity.getDateDemande() == null) {
+            entity.setDateDemande(Instant.now());
+        }
     }
 
     @Override
     public DemandeResponse create(DemandeRequest request) {
         Demande entity = mapper.toEntity(request);
+
         Client client = clientRepo.findById(request.getClientId())
-                .orElseThrow(() -> new IllegalArgumentException("Client introuvable"));
-        TypeDemande type = typeRepo.findById(request.getCodeType())
-                .orElseThrow(() -> new IllegalArgumentException("Type introuvable"));
-        StatutDemande statut = statutRepo.findById(request.getCodeStatut())
-                .orElseThrow(() -> new IllegalArgumentException("Statut introuvable"));
+                .orElseThrow(() -> new IllegalArgumentException("Client introuvable : " + request.getClientId()));
         entity.setClient(client);
-        entity.setTypeDemande(type);
-        entity.setStatutDemande(statut);
-        Demande saved = repository.save(entity);
-        return mapper.toResponse(saved);
+
+        String codeType   = (request.getCodeType()   != null && !request.getCodeType().isBlank()) ? request.getCodeType()   : TYPE_DEVIS;
+        // ⬇️ si non fourni -> Brouillon (et non En_attente)
+        String codeStatut = (request.getCodeStatut() != null && !request.getCodeStatut().isBlank()) ? request.getCodeStatut() : STATUT_BROUILLON;
+
+        entity.setTypeDemande(getTypeOrThrow(codeType));
+        entity.setStatutDemande(getStatutOrThrow(codeStatut));
+
+        ensureDateDemandeSet(entity);
+
+        return mapper.toResponse(repo.save(entity));
+    }
+
+    /** (utilisé si jamais tu gardes createPublic) */
+    @Override
+    public DemandeResponse createPublic() {
+        Demande entity = new Demande();
+        entity.setTypeDemande(getDefaultType());
+        entity.setStatutDemande(getDefaultStatut()); // ⬅️ Brouillon
+        ensureDateDemandeSet(entity);
+        return mapper.toResponse(repo.save(entity));
+    }
+
+    @Override
+    public DemandeResponse createForClient(Integer clientId, DemandeRequest request) {
+        Demande entity = mapper.toEntity(request);
+
+        Client client = clientRepo.findById(clientId)
+                .orElseThrow(() -> new IllegalArgumentException("Client introuvable : " + clientId));
+        entity.setClient(client);
+
+        String codeType   = (request.getCodeType()   != null && !request.getCodeType().isBlank()) ? request.getCodeType()   : TYPE_DEVIS;
+        String codeStatut = (request.getCodeStatut() != null && !request.getCodeStatut().isBlank()) ? request.getCodeStatut() : STATUT_BROUILLON;
+
+        entity.setTypeDemande(getTypeOrThrow(codeType));
+        entity.setStatutDemande(getStatutOrThrow(codeStatut));
+
+        ensureDateDemandeSet(entity);
+
+        return mapper.toResponse(repo.save(entity));
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<Integer> findCurrentIdForClient(Integer clientId) {
+        // ⚠️ on cherche bien la demande "Brouillon" (le panier)
+        return repo.findFirstByClient_IdClientAndStatutDemande_CodeStatutOrderByDateDemandeDesc(clientId, STATUT_BROUILLON)
+                .map(Demande::getIdDemande);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<DemandeResponse> findCurrentForClient(Integer clientId) {
+        return repo.findFirstByClient_IdClientAndStatutDemande_CodeStatutOrderByDateDemandeDesc(clientId, STATUT_BROUILLON)
+                .map(mapper::toResponse);
+    }
+
+    @Override
+    public DemandeResponse getOrCreateForClient(Integer clientId) {
+        return findCurrentForClient(clientId).orElseGet(() -> {
+            var type   = getDefaultType();
+            var statut = getDefaultStatut(); // ⬅️ Brouillon
+            var client = clientRepo.findById(clientId)
+                    .orElseThrow(() -> new IllegalArgumentException("Client introuvable: " + clientId));
+
+            Demande entity = new Demande();
+            entity.setDateDemande(Instant.now());
+            entity.setClient(client);
+            entity.setTypeDemande(type);
+            entity.setStatutDemande(statut);
+
+            return mapper.toResponse(repo.save(entity));
+        });
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<DemandeResponse> findById(Integer id) {
-        return repository.findById(id).map(mapper::toResponse);
+        return repo.findById(id).map(mapper::toResponse);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<DemandeResponse> findAll() {
-        return repository.findAll()
-                .stream()
-                .map(mapper::toResponse)
-                .collect(Collectors.toList());
+        return repo.findAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<DemandeResponse> findByClientId(Integer clientId) {
+        return repo.findByClient_IdClient(clientId).stream().map(mapper::toResponse).toList();
     }
 
     @Override
     public Optional<DemandeResponse> update(Integer id, DemandeRequest request) {
-        return repository.findById(id)
-                .map(existing -> {
-                    existing.setDateDemande(request.getDateDemande());
-                    Client client = clientRepo.findById(request.getClientId())
-                            .orElseThrow(() -> new IllegalArgumentException("Client introuvable"));
-                    TypeDemande type = typeRepo.findById(request.getCodeType())
-                            .orElseThrow(() -> new IllegalArgumentException("Type introuvable"));
-                    StatutDemande statut = statutRepo.findById(request.getCodeStatut())
-                            .orElseThrow(() -> new IllegalArgumentException("Statut introuvable"));
-                    existing.setClient(client);
-                    existing.setTypeDemande(type);
-                    existing.setStatutDemande(statut);
-                    Demande saved = repository.save(existing);
-                    return mapper.toResponse(saved);
-                });
+        return repo.findById(id).map(existing -> {
+            if (request.getDateDemande() != null) existing.setDateDemande(request.getDateDemande());
+            if (request.getClientId() != null) {
+                existing.setClient(
+                        clientRepo.findById(request.getClientId())
+                                .orElseThrow(() -> new IllegalArgumentException("Client introuvable: " + request.getClientId()))
+                );
+            }
+            if (request.getCodeType() != null)   existing.setTypeDemande(getTypeOrThrow(request.getCodeType()));
+            if (request.getCodeStatut() != null) existing.setStatutDemande(getStatutOrThrow(request.getCodeStatut()));
+
+            ensureDateDemandeSet(existing);
+            return mapper.toResponse(repo.save(existing));
+        });
     }
 
     @Override
     public boolean delete(Integer id) {
-        if (!repository.existsById(id)) return false;
-        repository.deleteById(id);
+        if (!repo.existsById(id)) return false;
+        repo.deleteById(id);
         return true;
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public ClientStatsDto findStatsByClientId(Integer clientId) {
+        long enAttente = repo.countByClient_IdClientAndStatutDemande_CodeStatut(clientId, "En_attente");
+        long traitees  = repo.countByClient_IdClientAndStatutDemande_CodeStatut(clientId, "Traitee");
+        long annulees  = repo.countByClient_IdClientAndStatutDemande_CodeStatut(clientId, "Annulee");
+        long rdvAvenir = rendezVousRepo.countUpcomingByClientId(clientId, Instant.now());
+        return new ClientStatsDto(enAttente, traitees, annulees, rdvAvenir);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<ProchainRdvDto> findProchainRdvByClientId(Integer clientId) {
+        var list = rendezVousRepo.findUpcomingByClientId(clientId, Instant.now());
+        if (list.isEmpty()) return Optional.empty();
+        var rv = list.get(0);
+        return Optional.of(ProchainRdvDto.builder()
+                .idRdv(rv.getIdRdv())
+                .codeStatut(rv.getStatut().getCodeStatut())
+                .libelleStatut(rv.getStatut().getLibelle())
+                .dateDebut(rv.getCreneau().getDateDebut())
+                .dateFin(rv.getCreneau().getDateFin())
+                .build());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<String> buildProchainRendezVousIcs(Integer clientId) {
+        var list = rendezVousRepo.findUpcomingByClientId(clientId, Instant.now());
+        if (list.isEmpty()) return Optional.empty();
+
+        var rv = list.get(0);
+        var cr = rv.getCreneau();
+
+        String uid        = IcsUtil.uid("rv-" + rv.getIdRdv() + "-" + cr.getDateDebut());
+        String garageName = (garageProps.getName() != null && !garageProps.getName().isBlank())
+                ? garageProps.getName() : "JLH Auto Pam";
+        String summary    = "Rendez-vous " + garageName;
+        String description = "Statut: " + rv.getStatut().getLibelle();
+        String location    = garageProps.getAddress() != null ? garageProps.getAddress() : "";
+
+        String ics = IcsUtil.veventWithAlarms(
+                uid, summary, description, location,
+                cr.getDateDebut(), cr.getDateFin(),
+                garageName, garageProps.getOrganizerEmail()
+        );
+
+        return Optional.of(ics);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<String> buildRendezVousIcs(Integer rdvId, Integer clientIdOrNullIfAdmin) {
+        var opt = (clientIdOrNullIfAdmin == null)
+                ? rendezVousRepo.findById(rdvId)
+                : rendezVousRepo.findByIdAndClient(rdvId, clientIdOrNullIfAdmin);
+
+        if (opt.isEmpty()) return Optional.empty();
+        var rv = opt.get();
+        var cr = rv.getCreneau();
+
+        String uid        = IcsUtil.uid("rv-" + rv.getIdRdv() + "-" + cr.getDateDebut());
+        String garageName = (garageProps.getName() != null && !garageProps.getName().isBlank())
+                ? garageProps.getName() : "JLH Auto Pam";
+        String summary    = "Rendez-vous " + garageName;
+        String description = "Statut: " + rv.getStatut().getLibelle();
+        String location    = garageProps.getAddress() != null ? garageProps.getAddress() : "";
+
+        String ics = IcsUtil.veventWithAlarms(
+                uid, summary, description, location,
+                cr.getDateDebut(), cr.getDateFin(),
+                garageName, garageProps.getOrganizerEmail()
+        );
+
+        return Optional.of(ics);
     }
 }
